--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-chartjs-2": "^3.0.4",
+    "chart.js": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
