--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "dashelements",
   "version": "0.1.0",
+  "homepage": "http://Gauthamjm007.github.io/DashElements",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
+    "chart.js": "^3.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1",
-    "react-chartjs-2": "^3.0.4",
-    "chart.js": "^3.5.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
